[project]
name = "cliargparser"
requires-python = ">=3.12"

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
strict = true
warn_no_return = true
warn_unreachable = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ",  # datetime timezone awareness
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # implicit string concatenation
    "N",  # pep8-naming
    "RUF",  # Ruff's rule set
    "T",  # typing hints / type checks
    "T20",  # print/debug statements
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["cliargparser"]
lines-after-imports = 2

[tool.tomlsort]
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.ruff.lint.select"]
inline_arrays = true
